--- a/kubernetes/k8s/deployment.yaml
+++ b/kubernetes/k8s/deployment.yaml
@@ -20,12 +20,12 @@ spec:
         imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
-            path: /actuator/info
+            path: /actuator/health/liveness
             port: 8080
         name: app
         ports:
         - containerPort: 8080
         readinessProbe:
           httpGet:
-            path: /actuator/health
+            path: /actuator/health/readiness
             port: 8080
