--- a/kubernetes/k8s/skaffold.yaml
+++ b/kubernetes/k8s/skaffold.yaml
@@ -5,8 +5,24 @@ metadata:
 build:
   artifacts:
   - image: hello-fun
+    custom:
+      buildCommand: ./mvnw spring-boot:build-image -DskipTests -Dspring-boot.build-image.imageName=$IMAGE
+      dependencies:
+        paths:
+          - src
+          - pom.xml
 deploy:
   kubectl:
     manifests:
     - kubernetes/service.yaml
     - kubernetes/deployment.yaml
+portForward:
+  - resourceType: service
+    resourceName: hello-fun
+    port: 80
+    localPort: 8080
+profiles:
+- name: local
+  build:
+    local:
+      push: false
