--- a/kubernetes/knative/skaffold.yaml
+++ b/kubernetes/knative/skaffold.yaml
@@ -5,7 +5,18 @@ metadata:
 build:
   artifacts:
   - image: hello-fun
+    custom:
+      buildCommand: ./mvnw spring-boot:build-image -DskipTests -Dspring-boot.build-image.imageName=$IMAGE
+      dependencies:
+        paths:
+          - src
+          - pom.xml
 deploy:
   kubectl:
     manifests:
     - kubernetes/service.yaml
+profiles:
+- name: local
+  build:
+    local:
+      push: false
