--- a/accelerator.yaml
+++ b/accelerator.yaml
@@ -14,52 +14,55 @@ accelerator:
   - name: deploymentType
     inputType: select
     choices:
-      none: Skip Kubernetes deployment
-      k8s-simple: Kubernetes deployment and service
-      knative: Knative service
+    - value: none
+      text: Skip Kubernetes deployment
+    - value: k8s-simple
+      text: Kubernetes deployment and service
+    - value: knative
+      text: Knative service
     defaultValue: k8s-simple
     required: true
 
 engine:
-  sources:
-    - includes: [ "**" ]
-      excludes: [ "README.md", "kubernetes/**" ]
-    - includes: [ "pom.xml" ]
-      transformations:
+  merge:
+    - include: [ "**" ]
+      exclude: [ "README.md", "kubernetes/**" ]
+    - include: [ "pom.xml" ]
+      chain:
       - type: ReplaceText
         substitutions:
         - text: hello-fun
           with: "#artifactId"
-    - includes: [ "kubernetes/k8s/deployment.yaml", "kubernetes/k8s/service.yaml" ]
+    - include: [ "kubernetes/k8s/deployment.yaml", "kubernetes/k8s/service.yaml" ]
       condition: "#deploymentType == 'k8s-simple'"
-      transformations:
+      chain:
       - type: ReplaceText
         substitutions:
         - text: hello-fun
           with: "#artifactId"
       - type: RewritePath
         rewriteTo: "'kubernetes/' + #filename"
-    - includes: [ "kubernetes/k8s/skaffold.yaml", "kubernetes/k8s/Tiltfile" ]
+    - include: [ "kubernetes/k8s/skaffold.yaml", "kubernetes/k8s/Tiltfile" ]
       condition: "#deploymentType == 'k8s-simple'"
-      transformations:
+      chain:
       - type: ReplaceText
         substitutions:
         - text: hello-fun
           with: "#artifactId"
       - type: RewritePath
         rewriteTo: "#filename"
-    - includes: [ "kubernetes/knative/service.yaml" ]
+    - include: [ "kubernetes/knative/service.yaml" ]
       condition: "#deploymentType == 'knative'"
-      transformations:
+      chain:
       - type: ReplaceText
         substitutions:
         - text: hello-fun
           with: "#artifactId"
       - type: RewritePath
         rewriteTo: "'kubernetes/' + #filename"
-    - includes: [ "kubernetes/knative/skaffold.yaml" ]
+    - include: [ "kubernetes/knative/skaffold.yaml" ]
       condition: "#deploymentType == 'knative'"
-      transformations:
+      chain:
       - type: ReplaceText
         substitutions:
         - text: hello-fun
@@ -67,23 +70,23 @@ engine:
       - type: RewritePath
         rewriteTo: "#filename"
     - name: README
-      type: Mega
+      type: Combo
       onConflict: Append
       sources:
-      - includes: [ "README.md"]
-        transformations:
+      - include: [ "README.md"]
+        chain:
         - type: ReplaceText
           substitutions:
           - text: hello-fun template repo
             with: "#artifactId"
-      - includes: [ "kubernetes/k8s/DEPLOYING.md" ]
+      - include: [ "kubernetes/k8s/DEPLOYING.md" ]
         condition: "#deploymentType == 'k8s-simple'"
-        transformations:
+        chain:
         - type: RewritePath
           rewriteTo: "'README.md'"
-      - includes: [ "kubernetes/knative/DEPLOYING.md" ]
+      - include: [ "kubernetes/knative/DEPLOYING.md" ]
         condition: "#deploymentType == 'knative'"
-        transformations:
+        chain:
         - type: ReplaceText
           substitutions:
           - text: hello-fun
