--- a/kubernetes/k8s/skaffold.yaml
+++ b/kubernetes/k8s/skaffold.yaml
@@ -21,8 +21,19 @@ portForward:
     resourceName: hello-fun
     port: 80
     localPort: 8080
+
 profiles:
 - name: local
   build:
     local:
       push: false
+- name: native
+  build:
+    artifacts:
+    - image: hello-fun
+      custom:
+        buildCommand: ./mvnw spring-boot:build-image -Pnative-buildpack -DskipTests -Dspring-boot.build-image.imageName=$IMAGE
+        dependencies:
+          paths:
+            - src
+            - pom.xml
