--- a/kubernetes/knative/skaffold.yaml
+++ b/kubernetes/knative/skaffold.yaml
@@ -15,8 +15,19 @@ deploy:
   kubectl:
     manifests:
     - kubernetes/service.yaml
+
 profiles:
 - name: local
   build:
     local:
       push: false
+- name: native
+  build:
+    artifacts:
+    - image: hello-fun
+      custom:
+        buildCommand: ./mvnw spring-boot:build-image -Pnative-buildpack -DskipTests -Dspring-boot.build-image.imageName=$IMAGE
+        dependencies:
+          paths:
+            - src
+            - pom.xml
