--- a/kubernetes/knative/skaffold.yaml
+++ b/kubernetes/knative/skaffold.yaml
@@ -8,11 +8,17 @@ build:
     custom:
       buildCommand: |-
         ./mvnw spring-boot:build-image -DskipTests -Dspring-boot.build-image.imageName=$IMAGE
-        docker push $IMAGE
+        if [ $PUSH_IMAGE ]; then
+          docker push $IMAGE
+        fi
       dependencies:
         paths:
           - src
           - pom.xml
+  tagPolicy:
+    sha256: {}
+  local:
+    push: true
 deploy:
   kubectl:
     manifests:
@@ -26,8 +32,14 @@ profiles:
       custom:
         buildCommand: |-
           ./mvnw spring-boot:build-image -Pnative-buildpack -DskipTests -Dspring-boot.build-image.imageName=$IMAGE
-          docker push $IMAGE
+          if [ $PUSH_IMAGE ]; then
+            docker push $IMAGE
+          fi
         dependencies:
           paths:
             - src
             - pom.xml
+    tagPolicy:
+      sha256: {}
+    local:
+      push: true
