Added Apache License 2.0

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
 		<spring-native.version>0.10.3</spring-native.version>
 	</properties>
 
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
+		</license>
+	</licenses>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
