--- a/accelerator.yaml
+++ b/accelerator.yaml
@@ -8,6 +8,7 @@ accelerator:
   - cloud
   - function
   - serverless
+  - tanzu
 
   # options for the UI
   options:
@@ -26,7 +27,7 @@ accelerator:
 engine:
   merge:
     - include: [ "**" ]
-      exclude: [ "pom.xml", "README.md", "kubernetes/**" ]
+      exclude: [ "pom.xml", "README.md", "kubernetes/**", "catalog/*.yaml" ]
     - include: [ "pom.xml" ]
       chain:
       - type: ReplaceText
@@ -56,12 +57,20 @@ engine:
       chain:
       - type: ReplaceText
         substitutions:
-        - text: hello-fun
-          with: "#artifactId"
+        - text: ": hello-fun"
+          with: "': ' + #artifactId"
       - type: RewritePath
         rewriteTo: "'kubernetes/' + #filename"
     - include: [ "kubernetes/tap/Tiltfile" ]
       condition: "#deploymentType == 'workload'"
+      chain:
+      - type: ReplaceText
+        substitutions:
+        - text: hello-fun
+          with: "#artifactId"
+      - type: RewritePath
+        rewriteTo: "#filename"
+    - include: [ "catalog/*.yaml" ]
       chain:
       - type: ReplaceText
         substitutions:
