--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.5</version>
+		<version>2.6.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
@@ -18,8 +18,6 @@
 		<java.version>11</java.version>
 		<spring-cloud.version>2021.0.1</spring-cloud.version>
 		<spring-native.version>0.11.3</spring-native.version>
-		<!-- TODO: remove override of boot dependency when upgrading boot -->
-		<jackson-bom.version>2.13.2.20220324</jackson-bom.version>
 	</properties>
 
 	<licenses>
@@ -62,6 +60,16 @@
 
 	<dependencyManagement>
 		<dependencies>
+			<!-- TODO: remove the spring-cloud-function-dependencies bom (it fixes CVE-2022-22963)
+			  when upgrading ${spring-cloud.version} -->
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-function-dependencies</artifactId>
+				<version>3.2.3</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<!-- TODO -->
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
