--- a/accelerator.yaml
+++ b/accelerator.yaml
@@ -23,14 +23,27 @@ accelerator:
       text: Skip Kubernetes deployment
     defaultValue: workload
     required: true
-  - name: sourceRepositoryPrefix
-    inputType: text
-    label: The source repository prefix to use when pushing the source
-    description: The prefix for the repository where source can be stored during development
-    defaultValue: dev.local
-    dependsOn:
-      name: deploymentType
-      value: workload
+  imports:
+  - name: java-version
+  - name: tap-initialize
+    expose:
+    - name: gitRepository
+      dependsOn:
+        name: deploymentType
+        value: workload
+    - name: gitBranch
+      dependsOn:
+        name: deploymentType
+        value: workload
+  - name: live-update
+    expose:
+    - name: liveUpdateIDESupport
+      dependsOn:
+        name: deploymentType
+        value: workload
+    - name: sourceRepositoryPrefix
+      dependsOn:
+        name: liveUpdateIDESupport
 
 engine:
   merge:
@@ -60,35 +73,6 @@ engine:
           with: "#artifactId"
       - type: RewritePath
         rewriteTo: "#filename"
-    - include: [ "kubernetes/tap/workload.yaml" ]
-      condition: "#deploymentType == 'workload'"
-      chain:
-      - type: ReplaceText
-        substitutions:
-        - text: ": hello-fun"
-          with: "': ' + #artifactId"
-      - type: RewritePath
-        rewriteTo: "'config/' + #filename"
-    - include: [ "kubernetes/tap/Tiltfile" ]
-      condition: "#deploymentType == 'workload'"
-      chain:
-      - type: ReplaceText
-        substitutions:
-        - text: hello-fun
-          with: "#artifactId"
-      - type: ReplaceText
-        substitutions:
-          - text: dev.local
-            with: "#sourceRepositoryPrefix"
-      - type: RewritePath
-        rewriteTo: "#filename"
-    - include: [ "catalog/*.yaml" ]
-      condition: "#deploymentType != 'none'"
-      chain:
-      - type: ReplaceText
-        substitutions:
-        - text: hello-fun
-          with: "#artifactId"
     - name: README
       type: Combo
       onConflict: Append
@@ -97,19 +81,19 @@ engine:
         chain:
         - type: ReplaceText
           substitutions:
-          - text: hello-fun template repo
+          - text: hello-fun repo
             with: "#artifactId"
       - include: [ "kubernetes/k8s/DEPLOYING.md" ]
         condition: "#deploymentType == 'k8s-simple'"
         chain:
         - type: RewritePath
           rewriteTo: "'README.md'"
-      - include: [ "kubernetes/tap/DEPLOYING.md" ]
-        condition: "#deploymentType == 'workload'"
-        chain:
-        - type: ReplaceText
-          substitutions:
-          - text: hello-fun
-            with: "#artifactId"
-        - type: RewritePath
-          rewriteTo: "'README.md'"
+    - type: InvokeFragment
+      condition: "#deploymentType == 'workload'"
+      reference: tap-initialize
+    - type: InvokeFragment
+      condition: "#deploymentType == 'workload'"
+      reference: live-update
+    - type: InvokeFragment
+      reference: java-version
+  onConflict: UseLast
