--- a/accelerator.yaml
+++ b/accelerator.yaml
@@ -14,6 +14,7 @@ accelerator:
   options:
   - name: deploymentType
     inputType: select
+    label: Deployment type
     choices:
     - value: workload
       text: TAP workload
